--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.6"
+    "helmet": "^3.13.0",
+    "mongoose": "^5.2.6",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
